<resources>
    <string name="app_name">Init-Android</string>

    <string name="home">홈</string>
    <string name="search">검색</string>
    <string name="alarm">알림</string>
    <string name="mypage">마이페이지</string>
    <string name="writing">글쓰기</string>


    <string name="other_mypage">님의 마이페이지</string>

    <string name="id">아이디</string>
    <string name="pw">비밀번호</string>
    <string name="login">로그인</string>
    <string name="register">회원가입</string>
    <string name="login_info">아직 회원이 아니신가요?</string>
    <string name="next">다음</string>

    <string name="input_pw">비밀번호를 입력해주세요</string>
    <string name="input_id">아이디를 입력해주세요</string>

    <string name="signup_info_one">아이디와 비밀번호를\n 입력해주세요.</string>
    <string name="signup_info_two">기본 정보를 입력해주세요.</string>
    <string name="confirm_already_exist">중복확인</string>

    <string name="name">이름</string>
    <string name="belong">학교(직장명)</string>
    <string name="email">이메일</string>
    <string name="academic">학적상태</string>
    <string name="sex">성별</string>

    <string name="man">남성</string>
    <string name="woman">여성</string>
    <string name="etc">기타</string>

    <string name="in_school">재학</string>
    <string name="rest_school">휴학</string>
    <string name="graduate">졸업</string>

    <string name="position">포지션</string>

    <string name="id_hint">영문,한글,숫자를 합하여 2–8자</string>
    <string name="pw_hint">영문, 숫자를 합하여 6–20자</string>
    <string name="belong_hint">인잇대학교</string>
    <string name="pw_hint_confirm">비밀번호 확인</string>
    <string name="signup_done">회원가입 완료</string>

    <string name="top">상</string>
    <string name="middle">중</string>
    <string name="bottom">하</string>

    <string name="warn_id_check">중복된 아이디입니다.</string>
    <string name="warn_id">최소 2글자이상 입력해주세요.</string>
    <string name="warn_pw">올바른 형식으로 입력해주세요.</string>
    <string name="warn_pw_check">비밀번호가 일치하지 않습니다.</string>

    <!-- 글쓰기(프로젝트뷰)-->
    <string name="open_project_title">글쓰기(1/2)</string>
    <string name="open_project_title_second">글쓰기(2/2)</string>
    <string name="project">프로젝트</string>
    <string name="open_project_name">프로젝트 이름</string>
    <string name="open_project_name_hint">프로젝트 이름을 작성해주세요</string>
    <string name="open_project_sort">프로젝트 종류</string>
    <string name="open_project_gather">모집 시기</string>
    <string name="wave">~</string>
    <string name="open_project_process">진행 시기</string>
    <string name="open_project_people">모집 인원</string>
    <string name="project_info">모집 정보</string>
    <string name="plan">기획</string>
    <string name="design">디자인</string>
    <string name="and">안드</string>
    <string name="ios">IOS</string>
    <string name="game">게임</string>
    <string name="web">웹</string>
    <string name="server">서버</string>
    <string name="open_project_select">선택해주세요</string>
    <string name="open_project_detail">상세 설명</string>
    <string name="open_project_write">작성해주세요</string>
    <string name="project_info_check">프로젝트 정보 확인</string>
    <string name="project_info_detail">프로젝트 정보</string>
    <string name="project_partner_info">팀원 정보</string>

    <string name="online">온라인</string>
    <string name="offline">오프라인</string>
    <string name="enrollment">재학상태</string>
    <string name="finish">완료</string>
    <string name="partner_info">팀원정보</string>
    <string name="string_kind">종류</string>
    <string name="string_gather_time">모집 기간</string>
    <string name="string_going_time">진행 기간</string>
    <string name="string_going_kind">진행 형식</string>
    <string name="detail_check_total_mem">모집 인원 확인하기</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- HomeFragment -->
    <string name="include_project">소속 프로젝트</string>
    <string name="recommend_project">추천 프로젝트</string>
    <string name="show_all">전체보기></string>
    <string name="no_include_project">소속된 프로젝트가 없어요!</string>
    <string name="no_recoomend_project">추천된 프로젝트가 없어요!\n개인정보 입력을 완료해주세요!</string>
    <string name="type_android">안드로이드</string>
    <string name="type_ios">iOS</string>
    <string name="type_web">웹</string>
    <string name="type_server">서버</string>
    <string name="type_game">게임</string>
    <string name="title_example">네이버 해커톤 같이 하실 분 구해요~</string>
    <string name="dday_dday">D-DAY</string>
    <string name="dday_fin">FIN</string>
    <string name="dday_ing">ING</string>
    <string name="writer">작성자</string>
    <string name="location_gangnam_gu">강남구</string>

    <!-- SearchFragment -->
    <string name="search_area_recruit">프로젝트 이름을 검색해주세요</string>
    <string name="search_area_partner">파트원 이름을 검색해주세요</string>
    <string name="string_project_type">프로젝트 타입</string>
    <string name="string_filtering">필터링 항목</string>
    <string name="string_key_word_search">키워드를 검색해주세요</string>표
    <string name="string_represent_position">대표 표지션</string>
    <string name="string_my_level">숙련도</string>
    <string name="string_null">.</string>

    <!--MyPage-->
    <string name="string_modify">수정</string>
    <string name="string_join">참여</string>
    <string name="string_upload">업로드</string>
    <string name="string_ready_approve">승인대기</string>
    <string name="string_heart">찜</string>
    <string name="string_belong">소속</string>
    <string name="string_acadmic">학적</string>
    <string name="string_technology_stack">기술 스택</string>
    <string name="string_link">링크</string>
    <string name="string_github">깃허브</string>
    <string name="string_notion">노션</string>
    <string name="string_blog">블로그</string>
    <string name="string_my_setting">내 설정</string>
    <string name="mypage_reset_pw">비밀번호 재설정</string>
    <string name="mypage_setting_alarm">알림 설정</string>
    <string name="mypage_app_info">앱 정보</string>
    <string name="string_logout">로그아웃</string>
    <string name="string_delete_person_info">탈퇴</string>
    <string name="mypage_input">직접 입력해주세요</string>
    <string name="string_basic_info">기본정보</string>
    <string name="string_edit_profile">프로필 편집</string>
    <string name="string_introduction">자기소개</string>
    <string name="string_notification">알림</string>
    <string name="string_stack">기술스택</string>
    <string name="string_add">추가</string>
    <string name="string_delete_all">전체삭제</string>
    <string name="detail_school_status">학적 상태</string>
    <string name="detail_part_condition">파트별 조건</string>
    <string name="string_at"> ~ </string>
    <string name="mypage_ing">참여중</string>
    <string name="mypage_finish">참여완료</string>

    <!--Message-->
    <string name="message_write">님께 메시지 작성</string>
    <string name="message_select_project">제안할 프로젝트를 선택해주세요</string>
    <string name="message_write_in_300">최대 300자 이내로 쪽지 내용을 작성해주세요</string>
    <string name="message_send">전송하기</string>

    <!--Dialog-->
    <string name="string_yes">네</string>
    <string name="string_no">아니오</string>
    <string name="bottom_sheet_join">지원하기</string>

    <!-- Feed -->
    <string name="feed_feed">피드</string>
    <string name="feed_search_hint">프로젝트 이름을 검색해주세요</string>
    <string name="feed_writing_writing">피드 작성</string>
    <string name="feed_writing_select_project">프로젝트 선택</string>
    <string name="feed_writing_select_info">선택해주세요.</string>
    <string name="feed_writing_project_name">프로젝트 이름</string>
    <string name="feed_writing_project_name_hint">프로젝트 이름을 작성해주세요.</string>
    <string name="feed_writing_detail">상세설명</string>
    <string name="feed_writing_write_info">작성해주세요.</string>
    <string name="feed_writing_link">링크 추가</string>
    <string name="feed_writing_project_type">프로젝트 유형</string>
    <string name="feed_detail_go_to_project">프로젝트 보러가기</string>
    <string name="string_all">전체</string>
    <string name="string_mobile">모바일</string>
    <string name="string_game">게임</string>

    <!-- Team Review Activity -->
    <string name="string_team_review">팀원 평가</string>
    <string name="edit_team_hint">팀원에 대한 자세한 평가를 남겨주세요!\n상세한 평가는 팀원 모집 시 많은 도움이 됩니다:)</string>
    <string name="do_you_like_this_person">이 사람을 추천하나요?</string>
    <string name="i_like_this_person">추천합니다!</string>
    <string name="string_register">등록하기</string>
    <string name="input_review">평가 입력</string>
    <string name="team_info">팀원 정보</string>
    <string name="review_confirm">평가 확인</string>
    <string name="you_liked_this_person">해당 팀원을 추천했어요!</string>
    <string name="string_delete">삭제</string>
    <string name="string_todo">TO-DO</string>
    <string name="string_done">완료</string>
    <string name="string_confirm">확인</string>
    <string name="string_review_done">평가가 완료되었어요!</string>

</resources>