<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_feed_top"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/main_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_feed_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feed_writing_writing"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior"/>

        <LinearLayout
            android:id="@+id/layout_feed_write"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_feed_top"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/tv_select_project"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginTop="8dp"
                android:text="@string/feed_writing_select_project"/>

            <Spinner
                android:id="@+id/spinner_select_project"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="32dp"/>

            <TextView
                android:id="@+id/tv_project_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginTop="8dp"
                android:text="@string/feed_writing_project_name"/>

            <EditText
                android:id="@+id/etv_project_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:hint="@string/feed_writing_project_name_hint"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tv_project_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginTop="8dp"
                android:text="@string/feed_writing_project_type"/>

            <Spinner
                android:id="@+id/spinner_project_type"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="32dp"/>

            <TextView
                android:id="@+id/tv_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/feed_writing_detail"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_view_select_photo"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:background="@color/white"
                app:strokeColor="@color/gray_3"
                app:strokeWidth="1dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_feed_camera"/>
            </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="95dp"
                    android:layout_height="95dp"
                    android:background="@color/white"
                    app:strokeColor="@color/gray_3"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="0dp">
                    <ImageView
                        android:id="@+id/iv_project_img"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>


            <EditText
                android:id="@+id/etv_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/feed_writing_detail"/>

            <TextView
                android:id="@+id/tv_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                android:text="@string/feed_writing_link"/>

            <EditText
                android:id="@+id/etv_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri"
                android:layout_marginTop="8dp"
                android:hint="@string/feed_writing_write_info"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/finish"/>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>