<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_my_page_basic_info_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_my_page_basic_info_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_icn_back" />

            <TextView
                android:id="@+id/tv_my_page_basic_info_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans_kr_regular"
                android:includeFontPadding="false"
                android:text="@string/string_basic_info"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_my_page_basic_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="56dp"
            app:layout_constraintTop_toBottomOf="@+id/cl_my_page_basic_info_top">

            <TextView
                android:id="@+id/tv_my_page_basic_info_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/noto_sans_kr_medium"
                android:includeFontPadding="false"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/cl_my_page_basic_info" />

            <EditText
                android:id="@+id/et_my_page_basic_info_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/selector_login_bg"
                android:fontFamily="@font/noto_sans_kr_regular"
                android:hint="@string/mypage_input"
                android:includeFontPadding="false"
                android:inputType="textPersonName"
                android:paddingVertical="13dp"
                android:paddingStart="16dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_6"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_my_page_basic_info_email"
                app:layout_constraintTop_toBottomOf="@id/tv_my_page_basic_info_email" />

            <TextView
                android:id="@+id/tv_my_page_basic_info_belong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/noto_sans_kr_medium"
                android:includeFontPadding="false"
                android:text="@string/string_belong"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/et_my_page_basic_info_email"
                app:layout_constraintTop_toBottomOf="@+id/et_my_page_basic_info_email" />

            <EditText
                android:id="@+id/et_my_page_basic_info_belong"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/selector_login_bg"
                android:fontFamily="@font/noto_sans_kr_regular"
                android:hint="@string/mypage_input"
                android:includeFontPadding="false"
                android:inputType="textPersonName"
                android:paddingVertical="13dp"
                android:paddingStart="16dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_6"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_my_page_basic_info_belong"
                app:layout_constraintTop_toBottomOf="@id/tv_my_page_basic_info_belong" />

            <TextView
                android:id="@+id/tv_my_page_basic_info_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/noto_sans_kr_medium"
                android:includeFontPadding="false"
                android:text="@string/enrollment"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/et_my_page_basic_info_belong"
                app:layout_constraintTop_toBottomOf="@+id/et_my_page_basic_info_belong" />

            <LinearLayout
                android:id="@+id/ll_academic"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_my_page_basic_info_status"
                app:layout_constraintTop_toBottomOf="@+id/tv_my_page_basic_info_status">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_in_school"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:textColor="@drawable/selector_text"
                    android:background="@drawable/selector_sex_btn"
                    android:text="@string/in_school" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_rest_school"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:textColor="@drawable/selector_text"
                    android:background="@drawable/selector_sex_btn"
                    android:text="@string/rest_school" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_graduate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@drawable/selector_text"
                    android:background="@drawable/selector_sex_btn"
                    android:text="@string/graduate" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/sex"
                android:textColor="@color/text_main"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/ll_academic"
                app:layout_constraintTop_toBottomOf="@+id/ll_academic" />

            <LinearLayout
                android:id="@+id/ll_sex"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@id/ll_academic"
                app:layout_constraintStart_toStartOf="@id/tv_sex"
                app:layout_constraintTop_toBottomOf="@id/tv_sex">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_man"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:textColor="@drawable/selector_text"
                    android:background="@drawable/selector_sex_btn"
                    android:text="@string/man" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_woman"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:textColor="@drawable/selector_text"
                    android:background="@drawable/selector_sex_btn"
                    android:text="@string/woman" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_etc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@drawable/selector_text"
                    android:background="@drawable/selector_sex_btn"
                    android:text="@string/etc" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_finish"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/rectangle_green_border_6"
                android:backgroundTint="@color/main_default"
                android:gravity="center"
                android:paddingVertical="6dp"
                android:text="@string/finish"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>